fixing alignments

--- a/src/App.css
+++ b/src/App.css
@@ -146,6 +146,10 @@ overflow-x: hidden;
   color: white;
 }
 
+#features h1 {
+  margin-top: 1em;
+}
+
 .feature-desc {
   display: flex;
   flex-direction: column;
@@ -184,6 +188,7 @@ overflow-x: hidden;
 }
 
 #roadmap h1 {
+  margin-top: 1em;
   text-align: center;
 }
 
@@ -191,7 +196,7 @@ overflow-x: hidden;
   position: absolute;
   width: 100vw;
   margin-left: -250px;
-  margin-top: -250px;
+  margin-top: -300px;
   fill: white;
 }
 
@@ -255,6 +260,7 @@ overflow-x: hidden;
   width: 1000px;
   height: 100vh;
   margin-left: 0px;
+  margin-top: -50px;
 }
 
 .ethdrop {
